namespaces/live.cloud-platform.service.justice.gov.uk/mandatory-drug-testing-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "hmpps-mandatory-drug-testing-dev"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "mdt-non-prod-notifications"
    cloud-platform.justice.gov.uk/application: "Mandatory Drug Testing"
    cloud-platform.justice.gov.uk/owner: "move and improve: moveandimprove@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-mandatory-drug-testing-api,https://github.com/ministryofjustice/hmpps-mandatory-drug-testing-ui"
    cloud-platform.justice.gov.uk/team-name: "hmpps-move-and-improve"
    cloud-platform.justice.gov.uk/review-after: ""
